objects/WS_Approver__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actual Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approvers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Record_Type__c</fullName>
        <formula>Reviewer_Workspace__r.Approval_Record_Type__c</formula>
        <label>Approval Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejeted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval__c</fullName>
        <formula>Reviewer_Workspace__r.Approval__c</formula>
        <label>Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Feed Back</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_not_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewer_Workspace__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workspace</label>
        <referenceTo>Reviewer_Workspace__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject_Matter_Expertise__c</fullName>
        <label>Subject Matter Expertise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Approver</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Approver Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>